# hullucinator

./: .gitignore  AGENTS.md  Dockerfile  ISSUES.md  LICENSE  PLAN.md  README.md  pyproject.toml  requirements.txt
app/: ai_client.py  config.py  exporter.py  generation.py  logging.py  main.py  middleware.py  orchestrator.py  parsing.py  review.py  routes.py  schemas.py  status.py  storage.py  validators.py
static/: __init__.py  index.html
static/css/: styles.css
static/js/: app.js  boot.js  config.js  renderers.js  settings.js  tts-manager.js  tts-worker.js  ui.js
tests/: __init__.py  conftest.py  test_ai_client.py  test_api.py  test_concurrency.py  test_config.py  test_export.py  test_frontend.py  test_orchestrator.py  test_parsing.py  test_schemas.py  test_storage.py
