[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hullucinator"
version = "1.0.0"
description = "AI-Powered E-Book Generator — generates complete e-books from a simple prompt"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Hullucinator Contributors"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "ebooklib>=0.18",
    "fpdf2>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
hullucinator = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*", "static*"]

[tool.setuptools.package-data]
static = ["*.html", "*.css", "*.js"]

[tool.ruff]
line-length = 120
target-version = "py39"
