[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hullucinator"
version = "1.2.0"
description = "AI-Powered E-Book Generator — generates complete e-books from a simple prompt"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Hullucinator Contributors"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "ebooklib>=0.18",
    "fpdf2>=2.0.0",
    "markdown>=3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
hullucinator = "app.main:main"

# (M9 fix: removed "static*" from packages since static/ is not a Python package.
# Static files are included as package data under "app" instead.)
[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["static/**/*"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.pytest.ini_options]
asyncio_mode = "auto"
